@@ -378,13 +378,11 @@ void Q3Player::respawn ()
 
 	Device->getLogger()->log( "respawn" );
 
-	if ( StartPositionCurrent >= Q3StartPosition (
-			Mesh, camera,StartPositionCurrent++,
-			cam ()->getEllipsoidTranslation() )
-		)
-	{
+	if (StartPositionCurrent >= Q3StartPosition(Mesh, camera,
+			StartPositionCurrent, cam()->getEllipsoidTranslation()))
 		StartPositionCurrent = 0;
-	}
+	else
+		++StartPositionCurrent;	
 }
 
 /*
@@ -2023,12 +2021,11 @@ void CQuake3EventHandler::Animate()
 	// Query Scene Manager attributes
 	if ( player->Anim[0].flags & FIRED )
 	{
-		ISceneManager *smgr = Game->Device->getSceneManager ();
 		wchar_t msg[128];
 		IVideoDriver * driver = Game->Device->getVideoDriver();
 
-		IAttributes * attr = smgr->getParameters();
 #ifdef _IRR_SCENEMANAGER_DEBUG					
+		IAttributes * attr = Game->Device->getSceneManager()->getParameters();
 		swprintf ( msg, 128,
 			L"Q3 %s [%ls], FPS:%03d Tri:%.03fm Cull %d/%d nodes (%d,%d,%d)",
 			Game->CurrentMapName.c_str(),
