@@ -2,14 +2,11 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 // Written by Michael Zeilfelder
 
-// TODO: We should have more pages for groups that don't fit into the display area.
-// 		So additional to CurrentGroupIdx we would also have a current-page-for-current-group thing.
-//		The interface doesn't have to be changed for that - just the implementation.
-
 #include "CGUIProfiler.h"
 #ifdef _IRR_COMPILE_WITH_GUI_
 
 #include "IGUITable.h"
+#include "IGUIScrollBar.h"
 #include "IGUIEnvironment.h"
 #include "CProfiler.h"
 
@@ -21,7 +18,7 @@ namespace gui
 //! constructor
 CGUIProfiler::CGUIProfiler(IGUIEnvironment* environment, IGUIElement* parent, s32 id, core::rect<s32> rectangle)
 	: IGUIProfiler(environment, parent, id, rectangle)
-	, DisplayTable(0), CurrentGroupIdx(0), IgnoreUncalled(false)
+	, DisplayTable(0), CurrentGroupIdx(0), CurrentGroupPage(0), NumGroupPages(1), IgnoreUncalled(false)
 {
 	Profiler = &getProfiler();
 
@@ -118,6 +115,49 @@ void CGUIProfiler::updateDisplay()
 				}
 			}
 		}
+
+		// IGUITable has no page-wise scrolling yet. The following code can be replaced when we add that.
+		// For now we use some CGUITable implementation info to figure this out.
+		// (If you wonder why I didn't code page-scrolling directly in CGUITable ... because then it needs to be a
+		// public interface and I don't have enough time currently to design & implement that well)
+		s32 itemsTotalHeight = DisplayTable->getRowCount() * DisplayTable->getItemHeight();
+		s32 tableHeight = DisplayTable->getAbsolutePosition().getHeight();
+		s32 heightTitleRow = DisplayTable->getItemHeight()+1;
+		if ( itemsTotalHeight+heightTitleRow < tableHeight )
+		{
+			NumGroupPages = 1;
+		}
+		else
+		{
+			s32 heightHScrollBar = DisplayTable->getHorizontalScrollBar() ? DisplayTable->getHorizontalScrollBar()->getAbsolutePosition().getHeight() : 0;
+			s32 pageHeight = tableHeight - (heightTitleRow+heightHScrollBar);
+			if ( pageHeight > 0 )
+			{
+				NumGroupPages = (itemsTotalHeight/pageHeight);
+				if ( itemsTotalHeight % pageHeight )
+					++NumGroupPages;
+			}
+			else // won't see anything, but that's up to the user
+			{
+				NumGroupPages = DisplayTable->getRowCount();
+			}
+			if ( NumGroupPages < 1 )
+				NumGroupPages = 1;
+		}
+		if ( CurrentGroupPage < 0 )
+			CurrentGroupPage = (s32)NumGroupPages-1;
+
+		IGUIScrollBar* vScrollBar = DisplayTable->getVerticalScrollBar();
+		if ( vScrollBar )
+		{
+			if ( NumGroupPages < 2 )
+				vScrollBar->setPos(0);
+			else
+			{
+				f32 factor = (f32)CurrentGroupPage/(f32)(NumGroupPages-1);
+				vScrollBar->setPos( s32(factor * (f32)vScrollBar->getMax()) );
+			}
+		}
 	}
 }
 
@@ -133,27 +173,41 @@ void CGUIProfiler::draw()
 
 void CGUIProfiler::nextPage(bool includeOverview)
 {
-	if ( ++CurrentGroupIdx >= Profiler->getGroupCount() )
+	if ( CurrentGroupPage < NumGroupPages-1 )
+		++CurrentGroupPage;
+	else
 	{
-		if ( includeOverview )
-			CurrentGroupIdx = 0;
-		else
-			CurrentGroupIdx = 1;	// can be invalid
+		CurrentGroupPage = 0;
+		if ( ++CurrentGroupIdx >= Profiler->getGroupCount() )
+		{
+			if ( includeOverview )
+				CurrentGroupIdx = 0;
+			else
+				CurrentGroupIdx = 1;	// can be invalid
+		}
 	}
 }
 
 void CGUIProfiler::previousPage(bool includeOverview)
 {
-	if ( CurrentGroupIdx > 0 )
-		--CurrentGroupIdx;
-	else
-		CurrentGroupIdx = Profiler->getGroupCount()-1;
-	if ( CurrentGroupIdx == 0 && !includeOverview )
+	if ( CurrentGroupPage > 0 )
 	{
-		if ( Profiler->getGroupCount() )
+		--CurrentGroupPage;
+	}
+	else
+	{
+		CurrentGroupPage = -1; // unknown because NumGroupPages has to be re-calculated first
+		if ( CurrentGroupIdx > 0 )
+			--CurrentGroupIdx;
+		else
 			CurrentGroupIdx = Profiler->getGroupCount()-1;
-		if ( CurrentGroupIdx == 0 )
-			CurrentGroupIdx = 1;	// invalid to avoid showing the overview
+		if ( CurrentGroupIdx == 0 && !includeOverview )
+		{
+			if ( Profiler->getGroupCount() )
+				CurrentGroupIdx = Profiler->getGroupCount()-1;
+			if ( CurrentGroupIdx == 0 )
+				CurrentGroupIdx = 1;	// invalid to avoid showing the overview
+		}
 	}
 }
 
@@ -163,6 +217,7 @@ void CGUIProfiler::firstPage(bool includeOverview)
 		CurrentGroupIdx = 0;
     else
 		CurrentGroupIdx = 1; // can be invalid
+	CurrentGroupPage = 0;
 }
 
 
